# python-teng

./: .gitignore  README.md  meson.build  pyproject.toml  setup.py
debian/: changelog  control  rules
subprojects/: libteng.wrap
teng/: __init__.py  rawteng.cc
tools/: cibw_before_build_linux.sh
